# Renamr

./: .gitignore  AGENTS.md  README.md  pyproject.toml  workflow_state.md
tests/: __init__.py  conftest.py  test_cadence.py  test_chunking.py  test_io.py  test_llm_client.py  test_name_extract.py  test_replace.py  test_ui_models.py
txt_process/: __init__.py  main.py
txt_process/core/: chunking.py  config.py  io.py  llm_client.py  name_extract.py  normalize_txt.py  replace.py
txt_process/resources/: app_icon.icns
txt_process/ui/: __init__.py  main_window.py  models.py  settings_dialog.py  workers.py
